package preFinal.prefinal1.ofertaAcademica.fabricaOferta;

public class MyExceptionFailNewOffer extends Exception {
    public MyExceptionFailNewOffer() {
    }

    public MyExceptionFailNewOffer(String message) {
        super(message);
    }
}
